--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.7.1",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "errorhandler": "^1.5.1",
     "exceljs": "^3.8.0",
@@ -19,6 +20,7 @@
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "node-notifier": "^6.0.0",
+    "qs": "^6.9.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
