--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "sohimazdai@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.7.1",
     "axios": "^0.20.0",
+    "axios-oauth-client": "^1.3.0",
     "body-parser": "^1.19.0",
     "errorhandler": "^1.5.1",
     "exceljs": "^3.8.0",
@@ -24,6 +23,8 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.7.1",
     "@types/node": "^13.7.4",
     "nodemon": "^2.0.2"
   }
