--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.9.1",
     "node-notifier": "^6.0.0",
     "qs": "^6.9.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
