--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "port=3001 nodemon index.js"
   },
   "author": "sohimazdai@gmail.com",
   "license": "ISC",
